--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                     <button type="submit" class="btn">Search</button>
                 </form>
             </div>
+            <div id="fivedayforcast"></div>
+            <div id="previouscity"></div>
 <script src="./assets/script.js"></script>
 </body>
 
