add date,cityname, css

--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
                     <button type="submit" class="btn">Search</button>
                 </form>
             </div>
-            <div id="currentweather"></div>
-            <div id="fivedayforcast"></div>
-            <div id="previouscity"></div>
+            <div id="currentweather" class="currentw">
+            </div>
+
+            <div id="fivedayforcast" class="fivew"></div>
+
+            <div>
+                <h2>Previous Search</h2>
+            <div id="previouscity" class="previousw"></div>
+
+            </div>
 <script src="./assets/script.js"></script>
 </body>
 
