--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main class="flex-row justify-space-between">
         <div class="col-12 col-md-4">
 
-            <div class="card">
+            <div class="cityCard">
                 <h3 class="card-header text-uppercase">Search By City</h3>
                 <form id="user-form" class="card-body">
                     <label class="form-label" for="cityname">Cityname</label>
