--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
 
             <div>
                 <h2>Previous Search</h2>
-                <button type="submit" class="Secbtn">Clear History</button>
-
-            <div id="previouscity" class="previousw">
-            </div>
+            <div id="previouscity" class="previousw"></div>
 
             </div>
 <script src="./assets/script.js"></script>
